fix: update cover text alignment

--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -142,12 +142,11 @@ section {
   min-height: 100vh;
 
   .cover-text {
-    position: absolute;
+    width: 100%;
     color: #fff;
     font-size: 4rem;
     font-family: 'Caesar Dressing', cursive;
     text-align: center;
-    padding: 0 10vw;
 
     .red-pill {
       padding: 0 10px;
